update package.json and README.md

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "frontend-project-lvl1",
+  "name": "brain-games",
   "version": "1.0.0",
   "description": "Brain Games",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-   "repository": {
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/AnnaMaetz/frontend-project-lvl1.git"
   },
