--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "brain-games",
+  "name": "annamaetz",
   "version": "1.0.0",
   "description": "Brain Games",
   "main": "index.js",
+  "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+  "prepublishOnly": "npm run build",
+  "bin": {
+    "brain-games": "dist/bin/brain-games.js"
+   },
+   "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
