--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "annamaetz",
+  "name": "braingames137",
   "version": "1.0.0",
   "description": "Brain Games",
   "main": "index.js",
-  "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-  "prepublishOnly": "npm run build",
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
-   },
-   "files": [
+  },
+  "files": [
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,6 @@
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5"
-  }
+  },
+  "dependencies": {}
 }
