--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "braingames137",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Brain Games",
   "main": "index.js",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
     "dist"
