--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "braingames137",
-  "version": "1.2.0",
+  "version": "1.3.1",
   "description": "Brain Games",
   "main": "index.js",
   "bin": {
-    "brain-games": "dist/bin/games/brain-games.js",
+    "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/games/brain-even.js",
     "brain-calc": "dist/bin/games/brain-calc.js"
   },
