--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "braingames137",
-  "version": "1.5.1",
+  "version": "1.6.1",
   "description": "Brain Games",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,8 @@
     "brain-even": "dist/bin/games/brain-even.js",
     "brain-calc": "dist/bin/games/brain-calc.js",
     "brain-gcd": "dist/bin/games/brain-gcd.js",
-    "brain-progression": "dist/bin/games/brain-progression.js"
+    "brain-progression": "dist/bin/games/brain-progression.js",
+    "brain-prime": "dist/bin/games/brain-prime.js"
   },
   "files": [
     "dist"
