update description of package.json"

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "braingames137",
   "version": "1.6.6",
-  "description": "Brain Games",
+  "description": "Brain Games - even, calc, gcd, progression, prime",
   "keywords": ["braingames", "brain games", "brain-games", "brain-even",
     "brain-calc", "brain-gcd", "brain-progression", "brain-prime"],
   "main": "index.js",
