--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "braingames137",
-  "version": "1.6.6",
+  "version": "1.7.0",
   "description": "Brain Games - even, calc, gcd, progression, prime",
-  "keywords": ["braingames", "brain games", "brain-games", "brain-even",
-    "brain-calc", "brain-gcd", "brain-progression", "brain-prime"],
+  "keywords": [
+    "braingames",
+    "brain games",
+    "brain-games",
+    "brain-even",
+    "brain-calc",
+    "brain-gcd",
+    "brain-progression",
+    "brain-prime"
+  ],
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/games/brain-even.js",
-    "brain-calc": "dist/bin/games/brain-calc.js",
-    "brain-gcd": "dist/bin/games/brain-gcd.js",
-    "brain-progression": "dist/bin/games/brain-progression.js",
-    "brain-prime": "dist/bin/games/brain-prime.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "files": [
     "dist"
